# excercise-tracker

./: .gitignore  README.md  app.py  data.txt  data2.txt  data3.txt  data_export.txt  entry.py  exercises.txt  export_data.py  generate_hash.py  import_data.py  notes_export.txt  pyproject.toml  render.yaml  review.md  set_password.ps1  setup_telegram.py
.github/workflows/: sync-data.yml
data/: data_export.txt  exercises.txt  injury_notes.txt  notes_export.txt  original-input-data.txt
exercise_tracker/: __init__.py  auth.py  config.py  db.py  parsing.py  plan.py  stats.py
exercise_tracker/routes/: __init__.py  api_routes.py  auth_routes.py  main_routes.py  telegram_routes.py
static/css/: shared.css
static/js/: charts.js  heatmap.js
templates/: index.html  login.html  mobile.html  stats.html
