[project]
name = "exercise-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "gunicorn>=22.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
